# nm-otool

./: -  1  2  CMakeLists.txt  Makefile  a.out1  cigam  cpu_file.c  errors.c  fat_o.c  fat_o_64.c  fat_otool.c  fat_otool_64.c  file_inside.c  ft_nm  ft_otool  lst_fuctions.c  mach_o.c  mach_o_32_64.c  mach_o_64.c  mach_o_otool.c  magic.c  main.c  my_split.c  nm  nm.c  nmotool.h  otool  otool.c  print_nm.c  print_nm_m_p_two.c  print_otool.c  tests.sh
ft_printf/: Makefile
ft_printf/a.out.dSYM/Contents/Resources/DWARF/: a.out
ft_printf/includes/: printf.h
ft_printf/includes/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_char_in_string.c  ft_count_if.c  ft_cut_space.c  ft_get_integer.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_long.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memfree.c  ft_memmove.c  ft_memset.c  ft_new_integer_list.c  ft_numzero.c  ft_print_symbol.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_putstr_mod.c  ft_split.c  (+37 more)
ft_printf/srcs/: base_n_p.c  bonus_color.c  bonus_fd.c  bonus_smile.c  color_option.c  format_checker.c  format_checker_one.c  ft_printf.c  ft_printf_one.c  print_some_wight_aruc.c  work_i_one.c  work_i_two.c  work_uxo_po_one.c  work_uxo_po_two.c  work_uxo_pt_one.c  work_with_errors.c  work_with_f_one.c  work_with_f_three.c  work_with_f_two.c  work_with_flags.c  work_with_floats.c  work_with_form_x.c  work_with_format_char_str.c  work_with_int.c  work_with_o.c  work_with_p.c  work_with_u.c  work_with_uxo_part_one.c  work_with_uxo_part_two.c  work_with_x_big.c
libft/: Makefile  ft_putchar.c  ft_putchar_fd.c  ft_putchar_mod.c  ft_putstr.c  ft_putstr_fd.c  ft_putstr_mod.c  ft_strcmp.c  libft.h
nm.dSYM/Contents/Resources/DWARF/: nm
otool.dSYM/Contents/Resources/DWARF/: otool
test/: 1  10  12  14  15  16  17  18  2  20  21  23  4  5  7  8
test1/: 11  14  19  21  23  5  9
