cmake_minimum_required(VERSION 3.15)
project(nm_otool C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(ft_printf/includes)
include_directories(ft_printf/includes/libft)

add_executable(nm_otool
		ft_printf/includes/libft/ft_atoi.c
		ft_printf/includes/libft/ft_bzero.c
		ft_printf/includes/libft/ft_char_in_string.c
		ft_printf/includes/libft/ft_count_if.c
		ft_printf/includes/libft/ft_cut_space.c
		ft_printf/includes/libft/ft_get_integer.c
		ft_printf/includes/libft/ft_isalnum.c
		ft_printf/includes/libft/ft_isalpha.c
		ft_printf/includes/libft/ft_isascii.c
		ft_printf/includes/libft/ft_isdigit.c
		ft_printf/includes/libft/ft_isprint.c
		ft_printf/includes/libft/ft_isspace.c
		ft_printf/includes/libft/ft_itoa.c
		ft_printf/includes/libft/ft_itoa_long.c
		ft_printf/includes/libft/ft_lstadd.c
		ft_printf/includes/libft/ft_lstdel.c
		ft_printf/includes/libft/ft_lstdelone.c
		ft_printf/includes/libft/ft_lstiter.c
		ft_printf/includes/libft/ft_lstmap.c
		ft_printf/includes/libft/ft_lstnew.c
		ft_printf/includes/libft/ft_memalloc.c
		ft_printf/includes/libft/ft_memccpy.c
		ft_printf/includes/libft/ft_memchr.c
		ft_printf/includes/libft/ft_memcmp.c
		ft_printf/includes/libft/ft_memcpy.c
		ft_printf/includes/libft/ft_memdel.c
		ft_printf/includes/libft/ft_memfree.c
		ft_printf/includes/libft/ft_memmove.c
		ft_printf/includes/libft/ft_memset.c
		ft_printf/includes/libft/ft_new_integer_list.c
		ft_printf/includes/libft/ft_numzero.c
		ft_printf/includes/libft/ft_print_symbol.c
		ft_printf/includes/libft/ft_putchar.c
		ft_printf/includes/libft/ft_putchar_fd.c
		ft_printf/includes/libft/ft_putchar_mod.c
		ft_printf/includes/libft/ft_putendl.c
		ft_printf/includes/libft/ft_putendl_fd.c
		ft_printf/includes/libft/ft_putnbr.c
		ft_printf/includes/libft/ft_putnbr_fd.c
		ft_printf/includes/libft/ft_putstr.c
		ft_printf/includes/libft/ft_putstr_fd.c
		ft_printf/includes/libft/ft_putstr_mod.c
		ft_printf/includes/libft/ft_split.c
		ft_printf/includes/libft/ft_sqrt.c
		ft_printf/includes/libft/ft_str_is_num.c
		ft_printf/includes/libft/ft_strcat.c
		ft_printf/includes/libft/ft_strchr.c
		ft_printf/includes/libft/ft_strclr.c
		ft_printf/includes/libft/ft_strcmp.c
		ft_printf/includes/libft/ft_strcpy.c
		ft_printf/includes/libft/ft_strdel.c
		ft_printf/includes/libft/ft_strdup.c
		ft_printf/includes/libft/ft_strequ.c
		ft_printf/includes/libft/ft_striter.c
		ft_printf/includes/libft/ft_striteri.c
		ft_printf/includes/libft/ft_strjoin.c
		ft_printf/includes/libft/ft_strlcat.c
		ft_printf/includes/libft/ft_strlen.c
		ft_printf/includes/libft/ft_strlen_mod.c
		ft_printf/includes/libft/ft_strlen_unilsymb.c
		ft_printf/includes/libft/ft_strmap.c
		ft_printf/includes/libft/ft_strmapi.c
		ft_printf/includes/libft/ft_strncat.c
		ft_printf/includes/libft/ft_strncmp.c
		ft_printf/includes/libft/ft_strncpy.c
		ft_printf/includes/libft/ft_strnequ.c
		ft_printf/includes/libft/ft_strnew.c
		ft_printf/includes/libft/ft_strnstr.c
		ft_printf/includes/libft/ft_strrchr.c
		ft_printf/includes/libft/ft_strsplit.c
		ft_printf/includes/libft/ft_strsplit_len.c
		ft_printf/includes/libft/ft_strstr.c
		ft_printf/includes/libft/ft_strsub.c
		ft_printf/includes/libft/ft_strtrim.c
		ft_printf/includes/libft/ft_tolower.c
		ft_printf/includes/libft/ft_toupper.c
		ft_printf/includes/libft/ft_word_count.c
		ft_printf/includes/libft/get_next_line.c
		ft_printf/includes/libft/libft.h
		ft_printf/includes/libft/new_gnl.c
		ft_printf/includes/printf.h
		ft_printf/srcs/base_n_p.c
		ft_printf/srcs/bonus_color.c
		ft_printf/srcs/bonus_fd.c
		ft_printf/srcs/bonus_smile.c
		ft_printf/srcs/color_option.c
		ft_printf/srcs/format_checker.c
		ft_printf/srcs/format_checker_one.c
		ft_printf/srcs/ft_printf.c
		ft_printf/srcs/ft_printf_one.c
		ft_printf/srcs/print_some_wight_aruc.c
		ft_printf/srcs/work_i_one.c
		ft_printf/srcs/work_i_two.c
		ft_printf/srcs/work_uxo_po_one.c
		ft_printf/srcs/work_uxo_po_two.c
		ft_printf/srcs/work_uxo_pt_one.c
		ft_printf/srcs/work_with_errors.c
		ft_printf/srcs/work_with_f_one.c
		ft_printf/srcs/work_with_f_three.c
		ft_printf/srcs/work_with_f_two.c
		ft_printf/srcs/work_with_flags.c
		ft_printf/srcs/work_with_floats.c
		ft_printf/srcs/work_with_form_x.c
		ft_printf/srcs/work_with_format_char_str.c
		ft_printf/srcs/work_with_int.c
		ft_printf/srcs/work_with_o.c
		ft_printf/srcs/work_with_p.c
		ft_printf/srcs/work_with_u.c
		ft_printf/srcs/work_with_uxo_part_one.c
		ft_printf/srcs/work_with_uxo_part_two.c
		ft_printf/srcs/work_with_x_big.c
		errors.c
		main.c
		file_inside.c
		nmotool.h magic.c)
